docs/v1.4.5/zh/api/campaign/AllianceCampaignBehavior.md
<!-- BEGIN BREADCRUMB -->
**首页** → **API 目录** → **本领域** → `AllianceCampaignBehavior`
- [← 本领域 / 返回 campaign](./)
- [↑ API 目录](../)
- [🏠 首页 v1.4.5](../../)
- [⭐ 版本架构](../../architecture/)
<!-- END BREADCRUMB -->
# AllianceCampaignBehavior

**Namespace:** TaleWorlds.CampaignSystem.CampaignBehaviors
**Module:** TaleWorlds.CampaignSystem
**Type:** `public class AllianceCampaignBehavior : CampaignBehaviorBase, IAllianceCampaignBehavior`
**Base:** `CampaignBehaviorBase`
**File:** `Bannerlord.Source/bin/TaleWorlds.CampaignSystem/TaleWorlds.CampaignSystem.CampaignBehaviors/AllianceCampaignBehavior.cs`

## 概述

`AllianceCampaignBehavior` 位于 `TaleWorlds.CampaignSystem.CampaignBehaviors`，它通过这组公开成员把对应子系统的状态、行为或流程入口暴露给 mod 开发者。阅读时先看属性代表“它持有什么状态”，再看方法代表“它允许你做什么”。

## 心智模型

先从命名空间 `TaleWorlds.CampaignSystem.CampaignBehaviors` 判断它属于哪层系统，再看公开方法：如果以 Get/Set 为主，它多半是状态对象；如果以 Create/Apply/Execute 为主，它更像服务或流程入口。

## 主要方法

### AutoGeneratedStaticCollectObjectsAlliance
`public static void AutoGeneratedStaticCollectObjectsAlliance(object o, List<object> collectedObjects)`

**用途 / Purpose:** 处理 `auto generated static collect objects alliance` 相关逻辑。

### AutoGeneratedStaticCollectObjectsCallToWarAgreement
`public static void AutoGeneratedStaticCollectObjectsCallToWarAgreement(object o, List<object> collectedObjects)`

**用途 / Purpose:** 处理 `auto generated static collect objects call to war agreement` 相关逻辑。

### RegisterEvents
`public override void RegisterEvents()`

**用途 / Purpose:** 处理 `register events` 相关逻辑。

### SyncData
`public override void SyncData(IDataStore dataStore)`

**用途 / Purpose:** 处理 `sync data` 相关逻辑。

### OnAllianceOfferedToPlayer
`public void OnAllianceOfferedToPlayer(Kingdom offeringKingdom)`

**用途 / Purpose:** 当 `alliance offered to player` 事件触发时调用此方法。

### OnAllianceOfferedToPlayerKingdom
`public void OnAllianceOfferedToPlayerKingdom(Kingdom offeringKingdom)`

**用途 / Purpose:** 当 `alliance offered to player kingdom` 事件触发时调用此方法。

### OnCallToWarAgreementProposedToPlayer
`public void OnCallToWarAgreementProposedToPlayer(Kingdom proposerKingdom, Kingdom kingdomToCallToWarAgainst)`

**用途 / Purpose:** 当 `call to war agreement proposed to player` 事件触发时调用此方法。

### OnCallToWarAgreementProposedToPlayerKingdom
`public void OnCallToWarAgreementProposedToPlayerKingdom(Kingdom proposerKingdom, Kingdom kingdomToCallToWarAgainst)`

**用途 / Purpose:** 当 `call to war agreement proposed to player kingdom` 事件触发时调用此方法。

### OnCallToWarAgreementProposedByPlayer
`public void OnCallToWarAgreementProposedByPlayer(Kingdom proposedKingdom, Kingdom kingdomToCallToWarAgainst)`

**用途 / Purpose:** 当 `call to war agreement proposed by player` 事件触发时调用此方法。

### GetAllianceEndDate
`public CampaignTime GetAllianceEndDate(Kingdom kingdom1, Kingdom kingdom2)`

**用途 / Purpose:** 获取 `alliance end date` 的当前值。

### OnCallToWarAgreementProposedByPlayerKingdom
`public void OnCallToWarAgreementProposedByPlayerKingdom(Kingdom proposedKingdom, Kingdom kingdomToCallToWarAgainst)`

**用途 / Purpose:** 当 `call to war agreement proposed by player kingdom` 事件触发时调用此方法。

### IsAllyWithKingdom
`public bool IsAllyWithKingdom(Kingdom kingdom1, Kingdom kingdom2)`

**用途 / Purpose:** 处理 `is ally with kingdom` 相关逻辑。

### StartAlliance
`public void StartAlliance(Kingdom proposerKingdom, Kingdom receiverKingdom)`

**用途 / Purpose:** 处理 `start alliance` 相关逻辑。

### EndAlliance
`public void EndAlliance(Kingdom kingdom1, Kingdom kingdom2)`

**用途 / Purpose:** 处理 `end alliance` 相关逻辑。

### HasCalledToWar
`public bool HasCalledToWar(Kingdom callingKingdom, Kingdom calledKingdom)`

**用途 / Purpose:** 判断当前对象是否包含/拥有 `called to war`。

### IsAtWarByCallToWarAgreement
`public bool IsAtWarByCallToWarAgreement(Kingdom calledKingdom, Kingdom kingdomToCallToWarAgainst, out Kingdom callingKingdom)`

**用途 / Purpose:** 处理 `is at war by call to war agreement` 相关逻辑。

### StartCallToWarAgreement
`public void StartCallToWarAgreement(Kingdom callingKingdom, Kingdom calledKingdom, Kingdom kingdomToCallToWarAgainst, int callToWarCost, bool isPlayerPaying = false)`

**用途 / Purpose:** 处理 `start call to war agreement` 相关逻辑。

### EndCallToWarAgreement
`public void EndCallToWarAgreement(Kingdom callingKingdom, Kingdom calledKingdom, Kingdom kingdomToCallToWarAgainst)`

**用途 / Purpose:** 处理 `end call to war agreement` 相关逻辑。

### DenyCallToWarAgreement
`public void DenyCallToWarAgreement(Kingdom callingKingdom, Kingdom calledKingdom)`

**用途 / Purpose:** 处理 `deny call to war agreement` 相关逻辑。

### GetKingdomsToCallToWarAgainst
`public List<Kingdom> GetKingdomsToCallToWarAgainst(Kingdom callingKingdom, Kingdom calledKingdom)`

**用途 / Purpose:** 获取 `kingdoms to call to war against` 的当前值。

## 使用示例

```csharp
AllianceCampaignBehavior.AutoGeneratedStaticCollectObjectsAlliance(o, collectedObjects);
```

## 参见

- [完整类目录](../catalog)